Make PerformanceEntry::toEntryTypeEnum case sensitive.

The performance timing spec has been clarified[1] to make getEntriesByType
case sensitive. This CL updates Blink to this new requirement.

[1] https://github.com/w3c/performance-timeline/issues/57

BUG=651507

Review-Url: https://codereview.chromium.org/2390733003
Cr-Commit-Position: refs/heads/master@{#422650}

Former-commit-id: 9c0ff2498f7fbead1b5de0b70d22d4546aecbdfa